<resources>
    <string name="app_name">hw9real</string>
    <string name="action_settings">Settings</string>
    <string name="stock_market_search">Stock Market Search</string>
    <string name="auto_refresh">AutoRefresh</string>
    <string name="get_quote">Get Quote</string>
    <string name="favorites">Favorites</string>
    <string name="clear">Clear</string>
    <string name="facebook_app_id">723060214569758</string>
    <string-array name="sort_By_Array">
        <item>Sort by</item>
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
    </string-array>
    <string-array name="order_Array">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="indicator_name">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>MACD</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">CURRENT</string>
    <string name="tab_text_2">HISTORICAL</string>
    <string name="tab_text_3">NEWS</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stock_details">Stock Details</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="Indicators">Indicators</string>
    <string name="failed_to_load_news_data">Failed to load news data</string>
    <string name="date">date</string>
    <string name="author">author</string>
    <string name="title">title</string>


</resources>
