<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/title"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/author"

        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/date"
        android:textSize="20sp"/>


</LinearLayout>