<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bowen.hw9real.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/restaurant">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textColor="@color/colorWhite"
        android:text="@string/stock_market_search"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:completionThreshold="1"

        />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/clear"
        android:textColor="@color/colorWhite"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="23dp"
        android:text="@string/auto_refresh" />

    <Button
        android:id="@+id/getQuote"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_marginStart="36dp"
        android:text="@string/get_quote"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/clear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch1"
        android:layout_below="@+id/autoCompleteTextView"
        android:text="@string/clear"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignStart="@+id/textView"
        android:text="@string/favorites"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/sortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/getQuote"
        android:layout_alignTop="@+id/order"
        android:layout_marginEnd="20dp" />

    <Spinner
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/autoCompleteTextView"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="28dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorBlack" />

    <ListView
        android:id="@+id/favoriteList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sortBy"
        android:layout_marginTop="12dp" />

    <ImageButton
        android:id="@+id/fresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/order"
        android:layout_alignTop="@+id/switch1"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_popup_sync" />

</RelativeLayout>
